--- a/DocStatus/styles.css
+++ b/DocStatus/styles.css
@@ -75,45 +75,47 @@ a:hover {
     /* Set your desired hover color */
 }
 
-.loginForm {
+.loginForm  , .signUpForm{
     background-color: rgba(255, 255, 255, 0.289);
     backdrop-filter: blur(5px) saturate(200%);
     border-radius: 12px;
     width: 300px;
     height: auto;
     padding: 20px 20px;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     border: none;
     border-radius: 10px;
     margin-top: 150px;
-    z-index: 5;
 }
 
-.loginForm>form {
+.signUpForm{
+    display: flex;
+}
+.loginForm>form  , .signUpForm >form{
     width: 100%;
     padding: 10px 0px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: flex-start;
+    align-items: center;
 }
 
-.loginHeader {
+.loginHeader, .signUpHeader{
     font-size: 30px;
     margin: 10px auto 0px auto;
     color: rgb(255, 255, 255);
 }
 
-.loginForm>hr {
+.loginForm>hr , .signUpForm>hr{
     width: 100%;
     border: 1px solid #7fffd4;
     margin: 15px auto 10px auto;
 }
 
-.loginForm>form>input {
+.loginForm>form>input  ,.signUpForm>form>input {
     background: none;
     margin-top: 15px;
     width: 100%;
@@ -125,15 +127,15 @@ a:hover {
     border-bottom: 2px solid #7fffd4;
 }
 
-.loginForm>form>input::placeholder {
+.loginForm>form>input::placeholder  , .signUpForm>form>input::placeholder{
     color: white;
 }
 
-.loginForm>form>input:focus {
+.loginForm>form>input:focus , .signUpForm>form>input:focus{
     border: none;
 }
 
-.submitButtonLogin {
+.submitButtonLogin ,.submitButtonsignUp {
     width: 100%;
     height: 30px;
     border: none;
@@ -142,17 +144,21 @@ a:hover {
     font-size: 18px;
     font-weight: 600;
     margin-top: 30px;
+    margin-bottom: 20px;
     cursor: pointer;
     transition: background-color .3s ease-out;
 }
 
-.submitButtonLogin:hover {
-    background-color: rgb(127, 255, 212);
+.submitButtonLogin:hover , .submitButtonsignUp:hover {
+    background-color: aquamarine;
 }
 
-.submitButtonLogin:active {
+.submitButtonLogin:active , .submitButtonsignUp:active {
     animation: clickAnimation 0.5s ease;
     /* Add 's' after 0.5 */
+}
+.alreadyAccount > a :hover{
+    cursor: pointer;
 }
 
 @keyframes clickAnimation {
@@ -165,7 +171,7 @@ a:hover {
     }
 
     100% {
-        transform: scale(1);
+         transform: scale(1);
     }
 }
 
