--- a/DocStatus/style.css
+++ b/DocStatus/style.css
@@ -68,9 +68,10 @@ ul li {
     color: #ffffff;
     font-weight: bold;
     position: relative;
-    padding-bottom: 5px;   
+    padding-bottom: 5px;
 }
-.navLink::after{
+
+.navLink::after {
     background-color: aquamarine;
     content: '';
     position: absolute;
@@ -82,13 +83,16 @@ ul li {
     transform: translateX(-50%);
     transition: width 0.5s ease;
 }
-.navLink:hover::after{
+
+.navLink:hover::after {
     width: 100%;
 }
+
 /* Add a hover effect for the links */
 
 
-.loginForm  , .signUpForm{
+.loginForm,
+.signUpForm {
     background-color: rgba(255, 255, 255, 0.289);
     backdrop-filter: blur(5px) saturate(200%);
     border-radius: 12px;
@@ -104,7 +108,8 @@ ul li {
     margin-top: 150px;
 }
 
-.loginForm>form  , .signUpForm >form{
+.loginForm>form,
+.signUpForm>form {
     width: 100%;
     padding: 10px 0px;
     display: flex;
@@ -113,19 +118,22 @@ ul li {
     align-items: center;
 }
 
-.loginHeader, .signUpHeader{
+.loginHeader,
+.signUpHeader {
     font-size: 30px;
     margin: 10px auto 0px auto;
     color: rgb(255, 255, 255);
 }
 
-.loginForm>hr , .signUpForm>hr{
+.loginForm>hr,
+.signUpForm>hr {
     width: 100%;
     border: 1px solid #7fffd4;
     margin: 15px auto 10px auto;
 }
 
-.loginForm>form>input  ,.signUpForm>form>input {
+.loginForm>form>input,
+.signUpForm>form>input {
     background: none;
     margin-top: 15px;
     width: 100%;
@@ -137,15 +145,18 @@ ul li {
     border-bottom: 2px solid #7fffd4;
 }
 
-.loginForm>form>input::placeholder  , .signUpForm>form>input::placeholder{
+.loginForm>form>input::placeholder,
+.signUpForm>form>input::placeholder {
     color: white;
 }
 
-.loginForm>form>input:focus , .signUpForm>form>input:focus{
+.loginForm>form>input:focus,
+.signUpForm>form>input:focus {
     border: none;
 }
 
-.submitButtonLogin ,.submitButtonsignUp {
+.submitButtonLogin,
+.submitButtonsignUp {
     width: 100%;
     height: 30px;
     border: none;
@@ -159,15 +170,18 @@ ul li {
     transition: background-color .3s ease-out;
 }
 
-.submitButtonLogin:hover , .submitButtonsignUp:hover {
+.submitButtonLogin:hover,
+.submitButtonsignUp:hover {
     background-color: aquamarine;
 }
 
-.submitButtonLogin:active , .submitButtonsignUp:active {
+.submitButtonLogin:active,
+.submitButtonsignUp:active {
     animation: clickAnimation 0.5s ease;
     /* Add 's' after 0.5 */
 }
-.alreadyAccount > a :hover{
+
+.alreadyAccount>a :hover {
     cursor: pointer;
 }
 
@@ -181,11 +195,97 @@ ul li {
     }
 
     100% {
-         transform: scale(1);
+        transform: scale(1);
     }
 }
 
+.hospitalsBoard {
+    background-color: rgba(0, 0, 0, 0.675);
+    backdrop-filter: blur(15px) saturate(200%);
+    width: 90%;
+    height: auto;
+    padding: 20px;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    margin-top: 50px;
+    border-radius: 10px;
+}
+.cityHospitalHeading{
+    margin: 30px 0px;
 
+}
+
+.hospital {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 0px;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px;
+}
+
+.hospitalLogo {
+    width: 150px;
+    border-radius: 50%;
+    padding: 0px 0px;
+}
+
+.hospitalDescription {
+    font-size: 12px;
+    line-height: 16px;
+    margin-top: 10px;
+}
+.hospitalName{
+    margin-bottom: 10px;
+ 
+}
+.hospitalintro{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+}
+
+.hospitalInfo {
+    margin-left: 20px;
+    padding: 20px 0px;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+}
+.hospitalOptions{
+    margin-top: 10px;
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+
+}
+.hospitalOptions :nth-child(1) {
+    border-left: none;
+}
+.hospitalOptions :nth-child(4){
+    border-right: none;
+}
+.hospitalOptionButtons{
+    width: 100%;
+    border: none;
+    border-left: 1px solid rgb(255, 255, 255);
+    border-right: 1px solid rgb(255, 255, 255);
+    border-radius: 2px;
+    height: 30px;
+    background: none;
+    cursor: pointer;
+}
+.hospitalOptionButtons:hover{
+    color: aquamarine;
+}
 
 @media (max-width: 600px) {
     body {
