--- a/DocStatus/style.css
+++ b/DocStatus/style.css
@@ -210,7 +210,7 @@ ul li {
     align-items: center;
     justify-content: space-around;
     flex-direction: column;
-    margin-top: 50px;
+    margin-top: 20px;
     border-radius: 10px;
 }
 .cityHospitalHeading{
@@ -226,6 +226,9 @@ ul li {
     justify-content: flex-start;
     align-items: center;
     padding: 10px;
+    box-shadow: 2px 1px 10px 1px #7fffd4;
+    border-radius: 30px 5px 30px 30px;
+    margin-bottom: 20px;
 }
 
 .hospitalLogo {
@@ -301,17 +304,16 @@ ul li {
     }
 
     .navList {
-        width: 90px;
+        width: 100px;
         display: none;
         flex-direction: column;
         backdrop-filter: blur(14px) saturate(200%);
         -webkit-backdrop-filter: blur(14px) saturate(194%);
         background-color: rgba(0, 0, 0, 0.289);
-
-        border-radius: 5px;
+        border-radius: 10px 0px 10px 10px;
         position: absolute;
-        right: 20px;
-        top: 58px;
+        right: 50px;
+        top: 70px;
         z-index: 10;
     }
 
