--- a/DocStatus/style.css
+++ b/DocStatus/style.css
@@ -9,7 +9,9 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url('./backgroundLandscape.jpg');
+    
+    background-color: #002a26db;
+    background-image: url('./backgroundlandscape.jpg');
     background-size: cover;
     background-position: 0px 0px;
     background-repeat: no-repeat;
@@ -88,8 +90,39 @@ ul li {
     width: 100%;
 }
 
-/* Add a hover effect for the links */
-
+.homeContainer{
+    width:80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 30px 20px;
+    margin-top: 50px;
+    background-color: rgba(0, 0, 0, 0.289);
+    backdrop-filter: blur(15px);
+    border-radius: 5px;
+}
+.homeIntro{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.homeIntro > h2{
+    margin: 10px 0px 15px 0px;
+    font-size: 35px;
+    
+}
+.homeIntro >h2> span{
+    font-size: 60px;
+    text-shadow:0px 0px 10px aquamarine;
+}
+.homeIntro  > p{
+    margin-left: 5px;
+    font-size: 17px;
+    line-height: 25px;
+    text-shadow:0px 0px 20px #7fffd465;
+    margin-top: 15px;
+}
 
 .loginForm,
 .signUpForm {
@@ -226,9 +259,9 @@ ul li {
     justify-content: flex-start;
     align-items: center;
     padding: 10px;
-    box-shadow: 2px 1px 10px 1px #7fffd4;
-    border-radius: 30px 5px 30px 30px;
-    margin-bottom: 20px;
+    box-shadow: 1px 1px 20px 1px #7fffd484;
+    border-radius: 20px 3px 20px 20px;
+    margin-bottom: 30px;
 }
 
 .hospitalLogo {
@@ -238,7 +271,7 @@ ul li {
 }
 
 .hospitalDescription {
-    font-size: 12px;
+    font-size: 14px;
     line-height: 16px;
     margin-top: 10px;
 }
@@ -251,12 +284,12 @@ ul li {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 .hospitalInfo {
     margin-left: 20px;
-    padding: 20px 0px;
+    padding: 10px 0px;
     width: 65%;
     display: flex;
     flex-direction: column;
@@ -292,7 +325,7 @@ ul li {
 
 @media (max-width: 600px) {
     body {
-        background-image: url('./backgroundPortrait\ -\ Copy.jpg');
+        background-image: url('./backgroundportrait.jpg');
         background-size: cover;
         background-position: 0px 0px;
         background-repeat: no-repeat;
