--- a/DocStatus/style.css
+++ b/DocStatus/style.css
@@ -9,7 +9,7 @@
 body {
     margin: 0;
     padding: 0;
-    
+
     background-color: #002a26db;
     background-image: url('./backgroundlandscape.jpg');
     background-size: cover;
@@ -48,7 +48,7 @@ header {
 
 .logo img {
     width: 50px;
-    /* Set your desired logo width */
+
 }
 
 .logo>h3 {
@@ -90,8 +90,8 @@ ul li {
     width: 100%;
 }
 
-.homeContainer{
-    width:80%;
+.homeContainer {
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -99,29 +99,93 @@ ul li {
     margin-top: 50px;
     background-color: rgba(0, 0, 0, 0.289);
     backdrop-filter: blur(15px);
-    border-radius: 5px;
+    border-radius: 10px;
 }
-.homeIntro{
+
+.homeIntro {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
-.homeIntro > h2{
+
+.homeIntro>h2 {
     margin: 10px 0px 15px 0px;
     font-size: 35px;
-    
+
 }
-.homeIntro >h2> span{
+
+.homeIntro>h2>span {
     font-size: 60px;
-    text-shadow:0px 0px 10px aquamarine;
+    text-shadow: 0px 0px 10px aquamarine;
 }
-.homeIntro  > p{
+
+.homeIntro>p {
     margin-left: 5px;
-    font-size: 17px;
+    font-size: 17.5px;
     line-height: 25px;
-    text-shadow:0px 0px 20px #7fffd465;
+    text-shadow: 0px 0px 20px #7fffd465;
     margin-top: 15px;
+}
+
+.featuresContainer {
+    margin-top: 20px;
+    background-color: rgba(0, 0, 0, 0.289);
+    backdrop-filter: blur(15px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.featuresContainer>h2 {
+    margin: 15px 0px;
+    font-size: 30px;
+    text-shadow: 0px 0px 10px aquamarine;
+    ;
+}
+.feature{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.featureHome {
+    display: flex;
+    padding: 10px 10px;
+    width: 400px;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 5px 10px;
+    border: 2px solid aquamarine;
+    border-radius: 5px;
+
+}
+
+.featureInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 4px;
+    margin-left: 3px;
+}
+
+.featureInfo>h3 {
+    font-size: 19px;
+}
+
+.featureInfo>p {
+    margin-top: 4px;
+    font-size: 12px;
+}
+
+.featureHome>img {
+    width: 50px;
+    height: 50px;
 }
 
 .loginForm,
@@ -246,7 +310,8 @@ ul li {
     margin-top: 20px;
     border-radius: 10px;
 }
-.cityHospitalHeading{
+
+.cityHospitalHeading {
     margin: 30px 0px;
 
 }
@@ -275,11 +340,13 @@ ul li {
     line-height: 16px;
     margin-top: 10px;
 }
-.hospitalName{
+
+.hospitalName {
     margin-bottom: 10px;
- 
+
 }
-.hospitalintro{
+
+.hospitalintro {
     width: 100%;
     display: flex;
     align-items: center;
@@ -296,20 +363,24 @@ ul li {
     align-items: flex-start;
     justify-content: space-evenly;
 }
-.hospitalOptions{
+
+.hospitalOptions {
     margin-top: 10px;
     display: flex;
     width: 100%;
     justify-content: space-evenly;
 
 }
+
 .hospitalOptions :nth-child(1) {
     border-left: none;
 }
-.hospitalOptions :nth-child(4){
+
+.hospitalOptions :nth-child(4) {
     border-right: none;
 }
-.hospitalOptionButtons{
+
+.hospitalOptionButtons {
     width: 100%;
     border: none;
     border-left: 1px solid rgb(255, 255, 255);
@@ -319,7 +390,8 @@ ul li {
     background: none;
     cursor: pointer;
 }
-.hospitalOptionButtons:hover{
+
+.hospitalOptionButtons:hover {
     color: aquamarine;
 }
 
@@ -356,5 +428,8 @@ ul li {
 
     ul li {
         margin: 10px 20px;
+    }
+    .featureHome{
+        width: 100%;
     }
 }
