--- a/DocStatus/style.css
+++ b/DocStatus/style.css
@@ -402,7 +402,7 @@ ul li {
     padding: 20px 10px;
     border-radius: 2%;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
     margin-top: 50px;
@@ -416,16 +416,16 @@ ul li {
     backdrop-filter: blur(8px) saturate(90%);
     width: 100%;
     text-align: center;
-    padding: 15px 0px;
-    border-radius: 2%;
+    padding: 20px 0px;
+    border-radius: 7px;
     text-shadow: 0px 0px 10px #7fffd4;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .doctor {
-    margin: 20px 0px;
-    width: 100%;
-    padding: 20px 15px;
+    margin: 15px 15px;
+    width: auto;
+    padding: 20px 40px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
