--- a/DocStatus/style.css
+++ b/DocStatus/style.css
@@ -404,22 +404,22 @@ ul li {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     margin-top: 50px;
     backdrop-filter: blur(10px) saturate(100%);
-    
+
 }
 
 .doctorStatusBoard>h3 {
     margin-bottom: 10px;
     background-color: #0106058f;
     backdrop-filter: blur(8px) saturate(90%);
-    width: 100%;
+    width: auto;
     text-align: center;
-    padding: 20px 0px;
+    padding: 20px 20px;
     border-radius: 7px;
     text-shadow: 0px 0px 10px #7fffd4;
-    font-size: 25px;
+    font-size: 30px;
 }
 
 .doctor {
@@ -488,6 +488,136 @@ ul li {
     margin-right: 10px;
 }
 
+/*
+DOCTOR PROFILE CSS
+*/
+
+.doctorProfilePage{
+    width: 80%;
+    padding: 20px;
+    background-color: #1f201fb4;
+    border-radius: 7px;
+    backdrop-filter: blur(10px) saturate(150%);
+}
+.doctorProfileHeader{
+    width: 100%;
+    padding: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.doctorProfileHeader > h4{
+    width: 40%;
+}
+.doctorProfileHeader  > h4 > span{
+    font-size: 20px;
+}
+.doctorProfileHeader > div > span {
+    align-self: center;
+
+}
+.doctorProfileHeader> div{
+    display: flex;
+    width: 70%;
+    justify-content: flex-end;
+    align-items: center;
+}
+.statusTextClass{
+    margin-right: 20px;
+    color: red;
+    text-shadow: 0px 0px 10px red;
+}
+.onlineStatus{
+    margin-right: 20px;
+    color: #00ff00;
+    text-shadow: 0px 0px 10px #00ff00;
+}
+.status{
+    align-self: center;
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px red;
+}
+.statusOn{
+    align-self: center;
+    width: 10px;
+    height: 10px;
+    background-color: #00ff00;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px #00ff00;
+}
+
+.doctorProfileBody{
+    width: 100%;
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: cnetr;
+}
+.statusofDoctor{
+    display: flex;
+    justify-content: space-between;
+    padding:4px 10px;
+    width: 100%;
+}
+
+.statusButton {
+    width: 40px;
+    height: 20px;
+}
+
+.toggleStatus {
+    display: none;
+}
+
+.toggle-label {
+    display: block;
+    width: 50px;
+    height: 20px;
+    background-color: #7fffd4;
+    border-radius: 15px;
+    /* Adjust the border-radius for rounded corners */
+    position: relative;
+}
+
+.toggle-handle {
+    width: 15px;
+    height: 15px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translate(0, -50%);
+    transition: transform 0.3s ease;
+}
+
+.toggleStatus:checked+.toggle-label .toggle-handle {
+    left: 30px;
+    transition: left 0.5s ease;
+}
+
+.toggleStatus:not(:checked)+.toggle-label .toggle-handle {
+    left: 4px;
+    transition: left 0.5s ease;
+}
+
+.toggleStatus:checked+.toggle-label {
+    background-color: rgb(0, 255, 34);
+    box-shadow: 0px 0px 10px rgb(0, 255, 34);
+    transition: background-color 0.5s ease;
+
+}
+
+.toggleStatus:not(:checked)+.toggle-label {
+    background-color: red;
+    box-shadow: 0px 0px 10px red;
+    transition: background-color 0.5s ease;
+}
+
 
 @media (max-width: 600px) {
     body {
@@ -526,5 +656,9 @@ ul li {
 
     .featureHome {
         width: 100%;
+    }
+
+    .doctorStatusBoard>h3 {
+        font-size: 24px;
     }
 }
