--- a/DocStatus/style.css
+++ b/DocStatus/style.css
@@ -655,6 +655,7 @@ DOCTOR PROFILE CSS
 }
 
 .tokenNumber {
+    background: none;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -689,6 +690,10 @@ DOCTOR PROFILE CSS
     padding: 0;
     background: none;
     cursor: pointer;
+}
+.numberScrolling>button:active {
+    background-color: transparent; /* Set the background color to transparent or any other color you prefer */
+    outline: none; /* Remove the default outline on click (optional) */
 }
 
 .nextNumberButton>img {
