--- a/DocStatus/style.css
+++ b/DocStatus/style.css
@@ -59,6 +59,9 @@ header {
     list-style: none;
     display: flex;
 }
+.navList1{
+    display: none;
+}
 
 ul li {
     margin-right: 20px;
@@ -494,14 +497,16 @@ DOCTOR PROFILE CSS
 
 .doctorProfileHeader {
     width: 100%;
+    max-width: 700px;
     margin-top: 10px;
-    padding: 10px 7px;
+    padding: 20px 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #ffffff71;
     backdrop-filter: blur(8px) saturate(200%);
     height: 170px;
+    border-radius: 17px;
 }
 
 .doctorProfileInfo {
@@ -557,6 +562,8 @@ DOCTOR PROFILE CSS
 .controlBoard {
     margin-top: 10px;
     width: 100%;
+    border-radius: 17px;
+    max-width: 700px;
     background-color: #ffffff71;
     backdrop-filter: blur(8px) saturate(200%);
     display: flex;
@@ -830,7 +837,13 @@ DOCTOR PROFILE CSS
         background-repeat: no-repeat;
         background-attachment: fixed;
     }
-
+    .doctorProfileHeader {
+        border-radius: 0;
+        padding: 10px 7px;
+    }
+    .controlBoard{
+        border-radius: 0;
+    }
     .dropDownButton {
         display: inline-block;
 
@@ -848,12 +861,24 @@ DOCTOR PROFILE CSS
         -webkit-backdrop-filter: blur(14px) saturate(194%);
         background-color: rgba(0, 0, 0, 0.289);
         border-radius: 10px 0px 10px 10px;
-        position: absolute;
+        
         right: 40px;
         top: 60px;
         z-index: 10;
         padding: 2px;
     }
+    .navList1{
+        display: none;
+        align-items: center;
+        width: 100%;
+        margin: 0;
+        border-radius: 0;
+   }
+   .navList1> li{
+    background-color: #24242437;
+    padding: 5px;
+    margin: 2px 0px;
+}
 
     .navList.show {
         display: flex;
