--- a/DocStatus/style.css
+++ b/DocStatus/style.css
@@ -59,7 +59,8 @@ header {
     list-style: none;
     display: flex;
 }
-.navList1{
+
+.navList1 {
     display: none;
 }
 
@@ -540,7 +541,7 @@ DOCTOR PROFILE CSS
     height: 100%;
 }
 
-.doctorProfileOptions>img{
+.doctorProfileOptions>img {
     cursor: pointer;
     align-self: flex-start;
     width: 50px;
@@ -552,9 +553,10 @@ DOCTOR PROFILE CSS
 }
 
 .doctorProfileOptions>img:hover {
-   transform: scale(1.2);
+    transform: scale(1.2);
 }
-.doctorProfileOptions >img:active{
+
+.doctorProfileOptions>img:active {
     transform: scale(1.5);
 }
 
@@ -829,6 +831,145 @@ DOCTOR PROFILE CSS
     transform: scale(1.3);
 }
 
+.affiliatedHospitalsEdit {
+    width: 100%;
+    padding: 10px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 0.341), inset 4px 4px 10px 1px rgba(0, 0, 0, 0.319);
+}
+
+.affiliatedHospitalsEdit>h2 {
+    font-weight: 500;
+    font-size: 1.3rem;
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid aquamarine;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.affiliatedHospitalEntry {
+    display: flex;
+    flex-direction: row;
+    padding: 5px 10px;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 2px solid aquamarine;
+    border-radius: 20px;
+    margin: 5px;
+    transform: scale(0.9);
+    transition: all 0.3s ease-in-out;
+}
+
+.affiliatedHospitalEntry:hover {
+    box-shadow: 0px 0px 3px aquamarine;
+    transform: scale(1);
+}
+
+.affiliatedHospitalEntry>h3 {
+    font-size: 15px;
+    font-weight: lighter;
+}
+
+.affiliatedHospitalEntry>img {
+    width: 20px;
+    margin-left: 10px;
+    transition: all 0.2s ease-in-out;
+}
+
+.affiliatedHospitalEntry>img:hover {
+    filter: drop-shadow(0px 0px 10px aquamarine);
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
+.addHospital {
+    box-shadow: 0px 0px 3px 0px aquamarine;
+    cursor: pointer;
+}
+
+.addingHospital {
+    width: 90%;
+    max-width: 400px;
+    border-radius: 10px;
+    padding: 20px 18px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #353535c1;
+    backdrop-filter: blur(8px) saturate(200%);
+}
+
+.addingHospital>label {
+    align-self: flex-start;
+    margin-top: 30px;
+}
+
+.addingHospital>img {
+    width: 20px;
+    align-self: flex-end;
+    transition: all 0.3 ease-in-out;
+}
+
+.addingHospital>img:hover,
+.addingHospital>img:active {
+    scale: 1.2;
+}
+
+.addingHospital>input {
+    width: 100%;
+    padding: 5px 10px;
+    margin: 10px 0px;
+    margin-bottom: 15px;
+    background: none;
+    background-color: #80ffd419;
+    border: none;
+    border-bottom: 2px solid aquamarine;
+    font-size: 16px;
+    cursor: text;
+}
+
+.addingHospital>input::placeholder {
+    color: rgba(255, 255, 255, 0.579);
+    font-size: 14px;
+}
+
+.addingHospital>input:focus {
+    border: none;
+}
+
+.addingHospital>button {
+    color: rgb(255, 255, 255);
+    margin: 10px 0px;
+    width: 100px;
+    padding: 5px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 17px;
+    background: none;
+    border: none;
+    border: 2px solid aquamarine;
+    border-radius: 20px;
+    justify-self: center;
+    font-weight: 500;
+    transition: all 0.3 ease-in-out;
+}
+
+.addingHospital>button:hover,
+.addingHospital>button:active {
+    background-color: #80ffd419;
+    scale: 1.05;
+}
+
 @media (max-width: 600px) {
     body {
         background-image: url('./images/backgroundportrait.jpg');
@@ -837,13 +978,16 @@ DOCTOR PROFILE CSS
         background-repeat: no-repeat;
         background-attachment: fixed;
     }
+
     .doctorProfileHeader {
         border-radius: 0;
         padding: 10px 7px;
     }
-    .controlBoard{
+
+    .controlBoard {
         border-radius: 0;
     }
+
     .dropDownButton {
         display: inline-block;
 
@@ -854,31 +998,29 @@ DOCTOR PROFILE CSS
     }
 
     .navList {
-        text-align: center;
+        display: none;
+
+    }
+
+    .navList1 {
         display: none;
         flex-direction: column;
-        backdrop-filter: blur(14px) saturate(200%);
-        -webkit-backdrop-filter: blur(14px) saturate(194%);
-        background-color: rgba(0, 0, 0, 0.289);
-        border-radius: 10px 0px 10px 10px;
-        
-        right: 40px;
-        top: 60px;
-        z-index: 10;
-        padding: 2px;
-    }
-    .navList1{
-        display: none;
+        width: 100%;
+        justify-content: space-evenly;
         align-items: center;
         width: 100%;
         margin: 0;
         border-radius: 0;
-   }
-   .navList1> li{
-    background-color: #24242437;
-    padding: 5px;
-    margin: 2px 0px;
-}
+    }
+
+    .navList1>li {
+        background-color: #24242481;
+        margin: 0;
+        padding: 5px;
+        width: 100%;
+        text-align: center;
+        font-size: 17px;
+    }
 
     .navList.show {
         display: flex;
