--- a/DocStatus/style.css
+++ b/DocStatus/style.css
@@ -32,8 +32,8 @@ header {
 
 .dropDownButton {
     display: none;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     border: none;
     background: none;
     border: none;
@@ -119,7 +119,7 @@ ul li {
 }
 
 .homeIntro>h2>span {
-    font-size: 60px;
+    font-size: 50px;
     text-shadow: 0px 0px 10px aquamarine;
 }
 
@@ -302,9 +302,10 @@ ul li {
 }
 
 .hospitalsBoard {
-    background-color: rgba(0, 0, 0, 0.675);
-    backdrop-filter: blur(15px) saturate(200%);
-    width: 90%;
+    background-color: rgba(15, 15, 15, 0.577);
+    backdrop-filter: blur(15px)  ;
+    width: 95%;
+    max-width: 700px;
     height: auto;
     padding: 20px;
     display: none;
@@ -317,10 +318,59 @@ ul li {
 }
 
 .cityHospitalHeading {
+    font-size: 30px;
     margin: 30px 0px;
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 10px aquamarine;
+}
+.searchHospital{
+    width: 70%;
+    max-width: 300px;
+    display: flex;
+    margin: 10px 0px 40px 0px;
+    align-items: center;
+    justify-content: flex-start;
+    justify-self: center;
+}
+.searchHospital >input{
+    width: 100%;
+    max-width: 200px;
+    font-size: 15px;
+    background: none;
+    border: none;
+    background-color: rgba(127, 255, 212, 0.429);
+    border-bottom: 3px solid aquamarine;
+    padding: 3px 10px;
+    border-radius: 2px;
+    color: white;
+}
+.searchHospital >input::placeholder{
+    color: rgba(255, 255, 255, 0.556);
+}
+.searchHospital > button{
+    width: 35px;
+    height: 30px;
+    background: none;
+    border: none;
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 5px;
+    margin-left: 20px;
+    justify-content: center;
+    border-bottom: 3px solid aquamarine;
+    background-color: rgba(127, 255, 212, 0.215);
+    border-radius: 2px;
+}
+.searchHospital > button >img{
+    width: 65%;
+    height: auto;
+    transition: all 0.4s ease;
+    filter: drop-shadow(0px 0px 5px aquamarine);
+}
+.searchHospital >button> img:hover{
+    transform: scale(1.2);
 
 }
-
 .hospital {
     display: flex;
     flex-direction: column;
@@ -330,8 +380,9 @@ ul li {
     align-items: center;
     padding: 10px;
     box-shadow: 1px 1px 20px 1px #7fffd484;
-    border-radius: 20px 3px 20px 20px;
+    border-radius: 8px ;
     margin-bottom: 30px;
+    background-color: rgba(0, 0, 0, 0.364);
 }
 
 .hospitalLogo {
@@ -388,7 +439,6 @@ ul li {
 .hospitalOptionButtons {
     width: 100%;
     border: none;
-    border-left: 1px solid rgb(255, 255, 255);
     border-right: 1px solid rgb(255, 255, 255);
     border-radius: 2px;
     height: 30px;
@@ -398,6 +448,10 @@ ul li {
 
 .hospitalOptionButtons:hover {
     color: aquamarine;
+}
+.lastOption{
+    border-right: none;
+    border-left: 1px solid rgb(255, 255, 255);
 }
 
 
@@ -409,14 +463,14 @@ ul li {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
-    backdrop-filter: blur(10px) saturate(100%);
-
+    margin-top: 50px; 
+    background-color: rgba(15, 15, 15, 0.577);
+    backdrop-filter: blur(15px)  ;
 }
 
 .doctorStatusBoard>h3 {
     margin-bottom: 10px;
-    background-color: #0106058f;
+    background-color:rgba(0, 0, 0, 0.364);
     backdrop-filter: blur(8px) saturate(90%);
     width: auto;
     text-align: center;
@@ -434,7 +488,7 @@ ul li {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background-color: #0106058f;
+    background-color: rgba(0, 0, 0, 0.364);
     backdrop-filter: blur(8px) saturate(90%);
     border-radius: 2%;
 }
@@ -684,6 +738,59 @@ DOCTOR PROFILE CSS
     text-shadow: 0px 0px 10px aquamarine;
     box-shadow: 0px 0px 10px aquamarine;
     right: 200px;
+}
+
+
+.lastToken {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.lastToken>p {
+    font-size: 22px;
+    margin-bottom: 20px;
+    text-shadow: 0px 0px 10px aquamarine;
+}
+
+.lastTokenNumbering {
+    width: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.lastTokenNumbering>p {
+    font-size: 30px;
+    text-shadow: 0px 0px 8px aquamarine;
+}
+
+.lastTokenNumbering>button {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    border: none;
+    transition: all 0.3s ease-in-out;
+}
+
+.lastTokenNumbering>button:hover {
+    transform: scale(1.2);
+}
+
+.lastTokenNumbering>button>img {
+    width: 100%;
+    filter: drop-shadow(0px 0px 10px);
+}
+
+.nextButton>img {
+    rotate: 180deg;
 }
 
 /* FOR PROFILE EDITING */
@@ -970,14 +1077,16 @@ DOCTOR PROFILE CSS
     background-color: #80ffd419;
     scale: 1.05;
 }
-.currentHospital{
+
+.currentHospital {
     width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 10px;
 }
-.currentHospital> select{
+
+.currentHospital>select {
     width: 250px;
     padding: 5px 10px;
     color: rgb(13, 95, 77);
@@ -992,15 +1101,67 @@ DOCTOR PROFILE CSS
     justify-content: center;
     align-items: center;
 }
-.currentHospital>select:focus{
+
+.currentHospital>select:focus {
     background-color: #7fffd4b3;
 
 }
-.dropDownOption{
+
+.dropDownOption {
     background-color: #7fffd44a !important;
     color: rgb(13, 95, 77);
     font-size: 14px;
 }
+.userProfile{
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(15, 15, 15, 0.577);
+    backdrop-filter: blur(10px);
+    width: 100%;
+    max-width: 400px;
+    padding: 10px;
+    margin-top: 40px;
+    border-radius: 4px;
+}
+.userProfile > img{
+    width: 28px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    filter: drop-shadow(0px 0px 5px aquamarine);
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+.userProfile >img:hover{
+    transform: scale(1.2);
+}
+.userProfileHeader{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.userProfileHeader> img{
+    width: 125px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+.userData{
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+}
+.userData >p{
+    margin: 10px;
+    border-radius: 5px;
+    padding: 2px 10px;
+    background-color: #7fffd479;
+}
+
 @media (max-width: 600px) {
     body {
         background-image: url('./images/backgroundportrait.jpg');
@@ -1021,12 +1182,16 @@ DOCTOR PROFILE CSS
 
     .dropDownButton {
         display: inline-block;
-
+        transition: all 0.3s ease-in-out;
     }
 
     .dropDownButton:hover {
         cursor: pointer;
     }
+/* 
+    .rotate {
+        transform: rotate(-90deg);
+    } */
 
     .navList {
         display: none;
