--- a/DocStatus/style.css
+++ b/DocStatus/style.css
@@ -94,7 +94,8 @@ ul li {
 }
 
 .homeContainer {
-    width: 80%;
+    width: 95%;
+    max-width: 450px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -102,7 +103,7 @@ ul li {
     margin-top: 50px;
     background-color: rgba(0, 0, 0, 0.289);
     backdrop-filter: blur(15px);
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .homeIntro {
@@ -132,6 +133,7 @@ ul li {
 }
 
 .featuresContainer {
+
     margin-top: 20px;
     background-color: rgba(0, 0, 0, 0.289);
     backdrop-filter: blur(15px);
@@ -139,9 +141,12 @@ ul li {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 95%;
+    max-width: 450px;
     padding: 10px;
-    border-radius: 10px;
+    padding-bottom: 30px;
+    border-radius: 5px;
+    margin-bottom: 40px;
 }
 
 .featuresContainer>h2 {
@@ -154,19 +159,20 @@ ul li {
 .feature {
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .featureHome {
     display: flex;
-    padding: 10px 10px;
-    width: 400px;
+    padding: 5px 7px;
+    width: 100%;
+    max-width: 320px;
     align-items: center;
     justify-content: flex-start;
     margin: 5px 10px;
-    border: 2px solid aquamarine;
+    border: 2px solid #7fffd4;
     border-radius: 5px;
 
 }
@@ -180,7 +186,7 @@ ul li {
 }
 
 .featureInfo>h3 {
-    font-size: 19px;
+    font-size: 15px;
 }
 
 .featureInfo>p {
@@ -189,8 +195,8 @@ ul li {
 }
 
 .featureHome>img {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
 }
 
 .loginForm,
@@ -324,12 +330,31 @@ ul li {
     text-shadow: 0px 0px 10px aquamarine;
 }
 .searchHospital{
+    position: relative;
     width: 100%;
     max-width: 300px;
     display: flex;
+    flex-direction: column;
     margin: 10px auto 40px 10px;
     align-items: center;
     justify-content: flex-start;
+}
+.hospitalsuggestion{
+    width: 100%;
+    max-width: 250px;
+    background-color: rgba(127, 255, 212, 0.429);
+}
+
+.suggestion{
+    width: 100%;
+    padding: 3px;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+font-size: 12px;
+border-radius: 5px;
+}
+.suggestion:hover{
+     background-color: rgba(127, 255, 212, 0.678);;
 }
 .searchHospital >input{
     width: 100%;
@@ -386,7 +411,7 @@ ul li {
 
 .hospitalLogo {
     width: 100px;
-    border-radius: 50%;
+    border-radius: 10px;
     padding: 2px 2px;
 }
 
@@ -593,9 +618,9 @@ ul li {
 .availabilityIndicator {
     width: 12px;
     height: 12px;
-    background-color: rgb(0, 255, 0);
+    background-color: rgb(255, 0, 0);
     border-radius: 50%;
-    box-shadow: 0px 0px 10px  rgb(0, 255, 0);
+    box-shadow: 0px 0px 10px  rgb(255, 0, 0);
     margin-right: 10px;
 }
 
@@ -713,9 +738,9 @@ ul li {
     
     width: 10px;
     height: 10px;
-    background-color: #00ff00;
+    background-color: #ff0000;
     margin-right: 10px;
-    box-shadow: 0px 0px 10px #00ff00;
+    box-shadow: 0px 0px 10px #ff0000;
     border-radius: 50%;
 }
 .allDoctors > .doctor >.doctorIntro > .status > p{
